@@ -114,7 +114,8 @@ module ActiveMerchant #:nodoc:
         pairs = body.split("&")
         pairs.each do |pair|
           a = pair.split("=")
-          result[a[0].to_sym] = CGI.unescape(a[1])
+          #Make sure there is a value, else set it to empty string
+          result[a[0].to_sym] = a[1] ? CGI.unescape(a[1]) : ""
         end
         result
       end
