@@ -2,6 +2,7 @@
 
 * Fix NoMethodError "tr" for params with dash [TimothyKlim]
 * Authorize.Net: Add cardholder authentication options (CAVV) support [structure]
+* CardStreamModern: Added better checks on inputs from the gateway [ExxKA]
 
 == Version 1.41.0 (October 24th, 2013)
 
